// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBanner renders correct snapshot 1`] = `
<withStyles(CardContent)>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <withStyles(Icon)
      className="DescribeElementCardBanner-icon-3"
    >
      people
    </withStyles(Icon)>
    <withStyles(Typography)
      className="DescribeElementCardBanner-cardTitle-1"
      type="headline"
    >
      expectedTitle
    </withStyles(Typography)>
  </div>
</withStyles(CardContent)>
`;

exports[`DescribeElementCardBanner renders correct snapshot with switches 1`] = `
<withStyles(CardContent)>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <withStyles(Typography)
      className="DescribeElementCardBanner-tallCardTitle-2"
      type="headline"
    >
      expectedTitle
    </withStyles(Typography)>
  </div>
</withStyles(CardContent)>
`;
